Финальное задание 12го спринта: исправление ошибок ИК